WIP-Bug 569174 : generate less dead or duplicate code
1.2 cleanup dependency declarations in Require-Bundle section

+ formatted gmfgen (as in master) => keep formatting


Change-Id: I087eb3fb09ac0977295d8ba5eb7192101d979e21
Signed-off-by: Etienne Allogo <etienne.allogo@artal.fr>